fixed folder issue, added javascript for faster page performance in changefolder, disables carousel while not visible

--- a/main.css
+++ b/main.css
@@ -157,7 +157,7 @@ hr {
     z-index: 55;
 }
 
-.carousel2-style {
+.carousel-style {
 
     height: 640px;
     width: 100%;
